--- a/doc/styles/style.css
+++ b/doc/styles/style.css
@@ -99,3 +99,12 @@ th {
 	text-align: left;
 }
 
+#author {
+    background-color: #ee332a;
+    color: white;
+}
+
+#email * {
+    background-color: #ee332a;
+    color: white;
+}
